# lidar-roomscanner

./: .dockerignore  .gitignore  BUGS.md  CLAUDE.md  ROADMAP.md  diff.txt  view-latest-scan.bat  view-live.bat  view-panel replay.bat  view-panel.bat  view-web.bat  view-web.sh
.agents/: AGENTS.md  skills.json
.claude/memory/: MEMORY.md  commit-signing-1password.md  cuda-at-scale-validation.md  edge-ai-tooling.md  eth-mdns-multicast-filter.md  firmware-bringup-division-of-labor.md  gpu-cuda-build-blocker.md  hardware-diagnosis-discipline.md  hardware-stack.md  hdr-rejected-dss.md  iks4a1-i3c-bus-conflict.md  live-view-fps-rendering.md  lsm6dsv16x-panel-integration.md  mapping-pipeline-plan.md  milestone-self-improvement.md  panel-ui-redesign.md  roadmap-review-notes.md  slam-stationary-jitter.md  status-sync-guardrails.md  workspace-and-repo.md  worktree-subagent-gotchas.md  yaw-drift-correction.md
.claude/skills/firmware-loop/: SKILL.md
.claude/skills/milestone-retro/: SKILL.md
.claude/skills/protocol-change/: SKILL.md
.claude/skills/stack-electrical/: SKILL.md
.claude/skills/status-sync/: SKILL.md
.claude/skills/wrap-up/: SKILL.md
.serena/: project.yml
docs/: connect-transient-forensics.md  coordinate-frames.md  deprojector-validation.md  engineering-practices.md  h563-optimization-notes.md  headless-host-setup.md  iks4a1-stacking.md  phase6-slam-validation.md  protocol.md  transform-streams.md  vl53l9cx-datasheet-notes.md  vl53l9cx-fov-notes.md  web-protocol.md  web-ui-testing.md  yaw-fusion.md
docs/superpowers/plans/: 2026-07-07-phase1-binary-protocol-visualizer.md  2026-07-08-phase2-raw-streaming-pc-transform.md  2026-07-08-phase2.5-color-fov-overlap.md  2026-07-08-phase3-runtime-config-robustness.md  2026-07-09-iks4a1-hub1-multidevice-i3c.md  2026-07-09-lsm6dsv16x-orientation-env-panel.md  2026-07-09-phase3.5-gui-panel.md  2026-07-09-surface-interpolation-design.md  2026-07-09-surface-interpolation-implementation.md  2026-07-10-lsm6dsv16x-mag-yaw-correction.md  2026-07-10-phase6-slam.md  2026-07-13-live-view-fps.md  2026-07-13-slam-gpu-container-service.md  2026-07-14-panel-ui-redesign.md
docs/superpowers/specs/: 2026-07-09-lsm6dsv16x-orientation-env-panel-design.md  2026-07-10-lsm6dsv16x-mag-yaw-correction-design.md  2026-07-10-phase6-slam-design.md  2026-07-10-viewer-metrics-hud-design.md  2026-07-13-live-view-fps-design.md  2026-07-13-panel-ui-redesign-design.md  2026-07-13-slam-gpu-container-service-design.md  2026-07-15-vendor-external-deps-design.md  2026-07-15-web-phase1-core-instrument-design.md  2026-07-16-web-phase2-sensors-design.md  2026-07-16-web-phase3-recording-playback-design.md  2026-07-16-web-phase4-slam-design.md
firmware/scanner-stream/: 53L9A1_PostprocessSingle.ioc  CMakeLists.txt
firmware/scanner-stream/Inc/: dhcpserver.h  ethernet_transport.h  lwipopts.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h
firmware/scanner-stream/Inc/arch/: cc.h  perf.h  sys_arch.h
firmware/scanner-stream/Src/: dhcpserver.c  ethernet_transport.c  ethernetif.c  main.c  rs_lsm.c  rs_lsm.h  rs_protocol.c  rs_protocol.h  stm32h5xx_hal_msp.c  stm32h5xx_it.c  tusb_config.h  usb_descriptors.c  vl53l9_app.c
host/: mag_cal.json  pyproject.toml
host/src/roomscan/: cards.py  colors.py  config.py  control.py  decoder.py  deproject.py  hud.py  instrument.py  ir_image.py  ir_overlay.py  logbus.py  logfilter.py  magcal.py  metrics.py  metrics_hud.py  native.py  panel.py  pipeline.py  portguard.py  protocol.py  reader.py  sensors.py  sensors_widgets.py  settings_dialog.py  shading.py  sources.py  surface.py  theme.py  viewer.py  web.py
host/src/roomscan/slam/: __init__.py  backend.py  cli.py  cloud.py  config.py  frames.py  intrinsics.py  mapper.py  meshprep.py  metrics.py  motion.py  odometry.py  remote.py  service.py  shading.py  showcase.py  tsdf.py  wire.py  worker.py
host/src/roomscan/static/: app.js  capture.js  controls.js  hud.js  index.html  ir.js  log.js  scene.js  sensors.js  slam.js  ws.js
host/tests/: bench_commands.py  golden.py  make_fixtures.py  make_golden_snippet.py  sweep_golden_capture.py  test_capture_regression.py  test_cards.py  test_colors.py  test_config.py  test_config_sensors.py  test_config_ui.py  test_control.py  test_decoder.py  test_deproject.py  test_dispatch.py  test_equivalence.py  test_hud.py  test_instrument.py  test_ir_image.py  test_ir_overlay.py  test_logbus.py  test_logfilter.py  test_mag_calibrate.py  test_magcal.py  test_metrics.py  test_metrics_hud.py  test_native.py  test_native_multi.py  test_panel.py  test_panel_meshpacket.py  test_panel_modes.py  test_panel_sensors.py  test_panel_showcase.py  test_panel_ux.py  test_panel_viewfps.py  test_panel_walls.py  test_pipeline.py  test_portguard.py  test_protocol.py  test_protocol_sensors.py  (+31 more)
host/tools/: analyze_capture.py  bench_commands.py  capture.py  check_cdc.py  check_udp.py  headless_doctor.py  mag_calibrate.py  measure_scene.py  monitor_vcom.py  panel_ui_smoke.py  panel_view.py  query_mdns.py  sniff_mdns.py  test_mdns.py  test_send.py  test_udp_receive.py  web_ui_shot.py
host/transform/: CMakeLists.txt  rs_transform_shim.c  rs_transform_shim.h
references/: 3D Mapping Architecture Evaluation.md  i2c-i3c-bus-debug-reference.md  roadmapResearch.md
references/datasheets/IKS4A1/: gs.txt  qs.txt
references/datasheets/LSM6DSV16XTR/: ds.txt
references/datasheets/NUCLEO-H563ZI/schematic/mb1404-bdp/: readme.txt
references/datasheets/NUCLEO-IKS4A1/LSM6DSV16XTR/: an.txt
references/kicad/roomscanner-stack/: README.md  generate_stack.py  jumper-config.md  roomscanner-stack.kicad_pro  roomscanner-stack.kicad_sch  roomscanner-stack.net  roomscanner.kicad_sym  stack-pinmap.md  sym-lib-table
references/software/x-nucleo-iks4a1/X-NUCLEO-IKS4A1/: library.properties
tools/slam-container/: Dockerfile  README.md  build.ps1  cuda_smoke.ps1  cuda_smoke.py  start.ps1  stop.ps1  verify_e2e.py
(+14 files in other folders)
