[project]
name = "roomscan"
version = "0.1.0"
description = "Host-side tools for the roomscanner ToF streamer"
requires-python = ">=3.11,<3.13"  # upper bound: open3d wheel availability
dependencies = ["numpy>=1.26", "pyserial>=3.5", "open3d>=0.18"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4"]
# Headless panel snapshotter (tools/panel_view.py) — CPU render for viewing the
# gui without a display (Open3D Filament offscreen needs a GPU/display).
tools = ["Pillow>=10"]

[project.scripts]
roomscan-view = "roomscan.viewer:main"
roomscan-panel = "roomscan.panel:main"
roomscan-ctl = "roomscan.control:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
