[project]
name = "roomscan"
version = "0.1.0"
description = "Host-side tools for the roomscanner ToF streamer"
requires-python = ">=3.11,<3.13"  # upper bound: open3d wheel availability
dependencies = ["numpy>=1.26", "pyserial>=3.5", "open3d>=0.18", "psutil>=5.9", "Pillow>=10"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4"]
# Metrics-HUD GPU/VRAM readout via NVML. Optional: without it the panel falls
# back to `nvidia-smi`, then to "GPU n/a" on non-NVIDIA hosts (metrics.py).
monitor = ["nvidia-ml-py>=12"]

[project.scripts]
roomscan-view = "roomscan.viewer:main"
roomscan-panel = "roomscan.panel:main"
roomscan-ctl = "roomscan.control:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
